--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lora">
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Wikipedia Viewer</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lora">
+  <link rel="stylesheet" href="styles.css"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="scripts.js"></script>
+</head>
+<body>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-offset-3 col-xs-offset-1 col-md-6 col-xs-10">
@@ -11,8 +21,10 @@
             <span class="glyphicon glyphicon-search form-control-feedback"></span>
           </div>
           <center>
-            <input value="Wiki Search" type="submit" class="btn btn-default" onclick="getWikiResults()">
-            <a class="btn btn-default" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">I'm Feeling Lucky</a>
+            <input value="Wiki Search" type="submit" class="btn btn-default"
+            onclick="getWikiResults()">
+            <a class="btn btn-default" href="https://en.wikipedia.org/wiki/Special:Random"
+            target="_blank">I'm Feeling Lucky</a>
           </center>
         </div>
       </div>
@@ -27,3 +39,4 @@
     Written by <a id="me" href="https://codepen.io/bielatm/" target="_blank">Marlena.</a>
   </footer>
 </div>
+</body>
